vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "dev-vpc"
    Created_by = "Terraform"
  }
}
